--- a/Oct/27.md
+++ b/Oct/27.md
@@ -1,13 +1,74 @@
 ### 카카오톡 강제로그인
 
+카카오 로그인 처리가 안되었던 부분을 강제로그인 처리( 주석 > 위에줄로 바꿈)
 
+UserService.java
+```java
+ Authentication kakaoUsernamePassword = new UsernamePasswordAuthenticationToken(email, password);
+
+        UserDetails userDetails = new UserDetailsImpl(kakaoUser);
+        Authentication authentication = new UsernamePasswordAuthenticationToken(userDetails, null, userDetails.getAuthorities());
+        SecurityContextHolder.getContext().setAuthentication(authentication);
+//
+//        Authentication authentication = authenticationManager.authenticate(kakaoUsernamePassword);
+//        SecurityContextHolder.getContext().setAuthentication(authentication);
+        HeaderDto headerDto = new HeaderDto();
+```
+
+---
 ### kakao login
-.userid(email)
-                    .username(nickname)
+
+데이터 베이스에 카카오 로그인시 일반 로그인의 칼럼도 같이 들어가는 문제 해결
+
+기존
+```java
+ kakaoUser = User.builder()
+                    .email(email)
                     .picture(picture)
                     .kakaoId(kakaoId)
                     .password(password)
                     .build();
+            userRepository.save(kakaoUser);
 
+```
+
+변경
+```java
+    kakaoUser = User.builder()
+                    **.userid(email)
+                    .username(nickname)**
+                    .picture(picture)
+                    .kakaoId(kakaoId)
+                    .password(password)
+                    .build();
+            userRepository.save(kakaoUser);
+
+```
+User.java
+```
+ @Builder
+    public User(String username ,String userid, String picture, String password, Long kakaoId){
+        **this.username = username;
+        this.userid = userid;**
+        this.picture = picture;
+        this.password = password;
+        this.kakaoId = kakaoId;
+    }
+```
 
 ### create token
+
+원래 주석처리 하는 부분이 변경전인데 위의 줄로 값 바꿈
+
+이는 jwtTokenProvider 부분의 crateToken의 변수값들과 항상 일치시켜줘야함 > 안그럼 로그인 오류 발생
+
+```java
+ User member = userRepository.findByKakaoId(kakaoId).orElseThrow(()
+                -> new IllegalArgumentException("존재하지 않는 유저입니다."));
+
+        headerDto.setTOKEN(jwtTokenProvider.createToken(member.getUserid(), member.getId(), member.getUsername()));
+//      headerDto.setTOKEN(jwtTokenProvider.createToken(email, member.getId(), member.getUsername()));
+//        System.out.println(test);
+        return headerDto;
+
+```
