--- a/Oct/31.md
+++ b/Oct/31.md
@@ -1,1 +1,130 @@
+### loginedUser 이해하기(CommentService)
 
+- 오늘의 TIL은 코드를 수정하면서 이해가 잘 가지 않았던 부분을 작성해보려 한다.
+
+username으로 수정, 삭제, 등록이 아닌 userId 고유의 값으로 유저 정보 체크하기
+
+goodsComment 클래스에서 로그인 정보를 확인하고 컨트롤러에 넘겨주기 위해 commentUserId, commentUserIndex 칼럼 생성
+```java
+public class GoodsComment extends Timestamped {
+
+    @GeneratedValue(strategy = GenerationType.AUTO)
+    @Id
+    private Long id;
+
+    @Column
+    private String userName;
+
+    @Column
+    private String comment;
+
+    @Column
+    private String commentUserId;
+
+    @Column
+    private Long commentUserIndex;
+
+    @ManyToOne(fetch = FetchType.LAZY, cascade = CascadeType.ALL)
+    @JoinColumn(name = "goodsId")
+    private Goods goods;
+
+    public GoodsComment(String userName,GoodsCommentRequestDto requestDto, Goods goods,String loginedUserId,Long loginedUserIndex){
+        this.userName = userName;
+        this.comment = requestDto.getComment();
+        this.goods = goods;
+        this.commentUserId = loginedUserId;
+        this.commentUserIndex = loginedUserIndex;
+    }
+```
+
+컨트롤러에서도 loginUser 정보 활용를 활용해 User 정보를 받아와 loginUser란 이름으로 service에 넘겨준다
+```java
+public class GoodsCommentController {
+    private final GoodsCommentService goodsCommentService;
+
+    @PostMapping("/page/goods/detail/{goodsId}/comment")
+    public GoodsCommentResponseDto postComment(@RequestBody GoodsCommentRequestDto requestDto,
+                                               @AuthenticationPrincipal UserDetailsImpl userDetails,
+                                               @PathVariable("goodsId") Long goodsid ){
+        if(userDetails == null){
+            throw new IllegalArgumentException("로그인 사용자만 가능한 기능입니다");
+        }
+        try {
+            **User loginUser = userDetails.getUser();**
+            goodsCommentService.createComment(loginUser, requestDto, goodsid);
+            GoodsCommentResponseDto goodsCommentResponseDto = new GoodsCommentResponseDto("success", "등록완료");
+            return goodsCommentResponseDto;
+        } catch (Exception e) {
+            GoodsCommentResponseDto goodsCommentResponseDto = new GoodsCommentResponseDto("","에러발생");
+            return goodsCommentResponseDto;
+        }
+    }
+```
+
+컨트롤러에서 받은 loginUser 정보를 통해 userid와 username을 받아온다 
+이때 변수 설정을 하는 부분의 순서는 상관 없지만 GoodsComment에 값을 저장할때는 GoodsComment 엔티티에 있는 생성자와 순서를 꼭 맞추어주어야 한다
+아래 변수에서 username과 id의 변수명을 바꿀때는 저장하는 변수에서도 바꾸어 줘야 한다.
+```java
+public class GoodsCommentService {
+    private final GoodsCommentRepository goodsCommentRepository;
+    private final GoodsRepository goodsRepository;
+
+    @Transactional
+    public void createComment(User loginUser, GoodsCommentRequestDto requestDto, Long goodsid) {
+//        Goods goods = new Goods(username, requestDto);
+//        goodsRepository.save(goods);
+        String loginedUsername = loginUser.getUserid();
+        String loginUsered = loginUser.getUsername();
+        Long loginUserIndex = loginUser.getId();
+        Goods goods = goodsRepository.findById(goodsid).orElseThrow(
+                () -> new IllegalArgumentException("존재하지 않는 아이디입니다")
+        );
+        GoodsComment goodsComment = new GoodsComment(loginUsered,requestDto,goods,loginedUsername,loginUserIndex);
+        goodsCommentRepository.save(goodsComment);
+
+    }
+
+```
+---
+
+```java
+@PutMapping("/page/goods/detail/{goodsCommentId}")
+    public GoodsCommentResponseDto updateComment(@PathVariable("goodsCommentId") Long id,
+                                                 @AuthenticationPrincipal UserDetailsImpl userDetails,
+                                                 @RequestBody GoodsCommentRequestDto requestDto){
+        if(userDetails == null){
+            throw new IllegalArgumentException("로그인 사용자만이 수정할 수 있습니다");
+        }
+        try {
+            goodsCommentService.updateGoodsComment(userDetails, id, requestDto);
+            GoodsCommentResponseDto goodsCommentResponseDto = new GoodsCommentResponseDto("success","변경완료");
+            return goodsCommentResponseDto;
+        } catch (Exception e) {
+            GoodsCommentResponseDto goodsCommentResponseDto = new GoodsCommentResponseDto("","에러발생");
+            return goodsCommentResponseDto;
+        }
+    }
+```
+수정할때도 user에서 id를 받와와서 맞는 id 값을 수정해준다
+```java
+ public void updateGoodsComment(UserDetailsImpl userDetails, Long id, GoodsCommentRequestDto requestDto) {
+        String loginUser = userDetails.getUser().getUserid();
+        String writer = "";
+
+        GoodsComment goodsComment = goodsCommentRepository.findById(id).orElseThrow(
+                () -> new IllegalArgumentException("존재하지 않는 아아디입니다")
+        );
+
+        if(goodsComment != null){
+            writer = goodsComment.getCommentUserId();
+
+            if(!loginUser.equals(writer)){
+                throw new IllegalArgumentException("수정권한이 없습니다");
+            }
+            goodsComment.updateComment(requestDto);
+            goodsCommentRepository.save(goodsComment);
+        }else {
+            throw new NullPointerException("해당 게시글이 존재하지 않습니다.");
+        }
+    }
+```
