--- a/Nov/3(회원인증).md
+++ b/Nov/3(회원인증).md
@@ -67,10 +67,12 @@ public void sendMessage(PhoneRequstDto requstDto, String ranNum) {
 
 + coolsSms를 쓸때는 build.gradle에 의존성을 추가해주고 build > lib에 jar를 추가해주었다
 
++ 일단 머리속 생각은 인증된 후 회원가입 페이지를 보여줘야겠다고 생각했다
+
 --- 
 
 ### 오늘회고
 
 오늘은 어제 멘토링 피드백을 토대로 추가기능에 대해 조원들과 논의를 했고 나는 회원 본인 인증과 알림기능을 맡아서 금요일까지 구현하기로 했다. 본인인증은 어찌 오늘구현을 하긴했는데
 내일 알림기능을 어떻게 구현해야 할지 벌써 막막하다. 멘토님 피드백으로는 무조건 문자로 구현하라는데 찾아보니까 카카오톡 메세지 등으로 보내는 방법도 존재했고 어떻게 구현할지는 차차 
-생각해봐야 할 것 같다. 항상 무엇을 시작할때 막막하다고 아무것도 하지 않기보다 일단 해보자라는 마인드로 틀려도 되니 먼저 해보는 마인드를 계속 가지며 코딩해야 
+생각해봐야 할 것 같다. 항상 무엇을 시작할때 막막하다고 아무것도 하지 않기보다 일단 해보자라는 마인드로 틀려도 되니 먼저 해보는 마인드를 계속 가지며 코딩해야 겠다.
